test/corpus/html_with_attributes.txt
================================================================================
HTML with void elements
================================================================================

<div>
    <meta name="viewport" content="width=device-width">
    <link rel="stylesheet" href="style.css">
    <img src="photo.jpg" alt="Photo">
</div>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (html_void_element
        (void_tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value))))
      (html_void_element
        (void_tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value))))
      (html_void_element
        (void_tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))))
    (end_tag
      (tag_name))))
