test/corpus/loop_directives.txt
================================================================================
Extend directive
================================================================================

#extend("base.leaf")
<div>
    <p>Extended content</p>
</div>
#endextend

--------------------------------------------------------------------------------

(template
  (leaf_directive
    (extend_directive
      (extend_header
        (string_literal))
      (html_content
        (html_element
          (start_tag
            (tag_name))
          (html_content
            (html_element
              (start_tag
                (tag_name))
              (html_content
                (text))
              (end_tag
                (tag_name))))
          (end_tag
            (tag_name))))
      (end_extend_directive))))

================================================================================
Export directive
================================================================================

#export("header")
<header>
    <h1>Page Title</h1>
</header>
#endexport

--------------------------------------------------------------------------------

(template
  (leaf_directive
    (export_directive
      (export_header
        (string_literal))
      (html_content
        (html_element
          (start_tag
            (tag_name))
          (html_content
            (html_element
              (start_tag
                (tag_name))
              (html_content
                (text))
              (end_tag
                (tag_name))))
          (end_tag
            (tag_name))))
      (end_export_directive))))

================================================================================
Import directive
================================================================================

<div>
    #import("components/navbar.leaf")
</div>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (leaf_directive
        (import_directive
          (import_header
            (string_literal)))))
    (end_tag
      (tag_name))))

================================================================================
Evaluate directive
================================================================================

<div>
    #evaluate(logAccess())
    <p>Welcome!</p>
</div>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (leaf_directive
        (evaluate_directive
          (evaluate_header
            (expression
              (postfix_expression
                (call_expression
                  (postfix_expression
                    (primary_expression
                      (identifier)))))))))
      (html_element
        (start_tag
          (tag_name))
        (html_content
          (text))
        (end_tag
          (tag_name))))
    (end_tag
      (tag_name))))

================================================================================
Simple for loop directive
================================================================================

<ul>
    #for(item in items)
        <li>#(item.name)</li>
    #endfor
</ul>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (leaf_directive
        (for_directive
          (for_header
            (identifier)
            (expression
              (postfix_expression
                (primary_expression
                  (identifier)))))
          (html_content
            (html_element
              (start_tag
                (tag_name))
              (html_content
                (leaf_variable
                  (expression
                    (postfix_expression
                      (member_expression
                        (postfix_expression
                          (primary_expression
                            (identifier)))
                        (identifier))))))
              (end_tag
                (tag_name))))
          (end_for_directive))))
    (end_tag
      (tag_name))))
      
================================================================================
While directive
================================================================================

<div>
#while(counter < 5)
    <p>Count: #(counter)</p>
#endwhile
</div>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (leaf_directive
        (while_directive
          (while_header
            (expression
              (binary_expression
                (expression
                  (postfix_expression
                    (primary_expression
                      (identifier))))
                (expression
                  (postfix_expression
                    (primary_expression
                      (number_literal)))))))
          (html_content
            (html_element
              (start_tag
                (tag_name))
              (html_content
                (text)
                (leaf_variable
                  (simple_variable
                    (identifier))))
              (end_tag
                (tag_name))))
          (end_while_directive))))
    (end_tag
      (tag_name))))
